Fixed bugs in friend request to unregistered person, resetting password, saved recipe profile, private profile, party profile, dashboard, friend profile, delete account

--- a/app/static/site.css
+++ b/app/static/site.css
@@ -171,3 +171,24 @@ b  {
   margin-left: auto;
   margin-right: auto;
 }
+
+/*-------*/
+
+.ooltip{
+    display: inline;
+    position: relative;
+}
+
+.ooltip:hover:after{
+    background: #5bc0de;
+    background: rgba(91,192,222);
+    border-radius: 5px;
+    bottom: 26px;
+    color: #fff;
+    content: attr(title);
+    left: 20%;
+    padding: 5px 15px;
+    position: absolute;
+    z-index: 98;
+    width: 220px;
+}
