--- a/app/templates/profiles/dashboard.html
+++ b/app/templates/profiles/dashboard.html
@@ -287,8 +287,8 @@
                     </div>
                 </div>
 
-                <div class="dietReason">
-                    <div id="dietReason">
+                <div class="dreason">
+                    <div id="dreason">
                         <button type="button" class="btn btn-sm btn-default" data-toggle="modal" data-target="#dietReasonModal">
                             <span class="glyphicon glyphicon-pencil text-info" title="Change the reason you follow this diet. This information is shown to hosts to help them decide what to make for other guests." aria-hidden="true"></span>
                         </button>&emsp; <strong>Diet reason:</strong>&emsp;{{  profile.diet_reason  }}
