--- a/app/templates/main/kind_homepage.html
+++ b/app/templates/main/kind_homepage.html
@@ -16,22 +16,21 @@
 
             {% if current_user.is_authenticated %}
                 {% if profile.email_verified == false %}
-                    <p class="bg-primary text-white">Hi {{  profile.first_name  }},<br><br>
+                    <p class="alert alert danger" role="alert">Hi {{  profile.first_name  }},<br><br>
                         Please check the email account you used to register for an email with 
                         a link in it for confirming your email account. Once I know your email account
                         is real, I would love for you to start using Kind Table to plan some 
                         amazing meals.</p>
-                {% endif %}
-                
-                <b>Hello,
-                {% if current_user.profile.first_name is not none %}
-                    {{  current_user.profile.first_name  }}.
+                {% if profile.email_verified == true %}
+                    <b>Hello,
+                    {% if current_user.profile.first_name is not none %}
+                        {{  current_user.profile.first_name  }}.
+                    {% else %}
+                        {{  current_user.profile.email  }}.
+                    {% endif %}
+                    Welcome back!</b>
+                    <p>What would you like to work on today?</p>
                 {% else %}
-                    {{  current_user.profile.email  }}.
-                {% endif %}
-                Welcome back!</b>
-                <p>What would you like to work on today?</p>
-            {% else %}
                 <b>Kind Table takes the work out of choosing recipes for a dinner party or holiday event by managing your friends dietary needs and preferences and presenting recipes that would work for all.</b>
             {% endif %}
         </div>
