--- a/app/templates/main/kind_homepage.html
+++ b/app/templates/main/kind_homepage.html
@@ -21,7 +21,7 @@
                         a link in it for confirming your email account. Once I know your email account
                         is real, I would love for you to start using Kind Table to plan some 
                         amazing meals.</p>
-                {% if profile.email_verified == true %}
+                {% elif profile.email_verified == true %}
                     <b>Hello,
                     {% if current_user.profile.first_name is not none %}
                         {{  current_user.profile.first_name  }}.
