Typos in jinja syntax on homepage

--- a/app/templates/main/kind_homepage.html
+++ b/app/templates/main/kind_homepage.html
@@ -30,7 +30,8 @@
                     {% endif %}
                     Welcome back!</b>
                     <p>What would you like to work on today?</p>
-                {% else %}
+                {% endif %}
+            {% else %}
                 <b>Kind Table takes the work out of choosing recipes for a dinner party or holiday event by managing your friends dietary needs and preferences and presenting recipes that would work for all.</b>
             {% endif %}
         </div>
