--- a/app/templates/main/kind_homepage.html
+++ b/app/templates/main/kind_homepage.html
@@ -16,7 +16,7 @@
 
             {% if current_user.is_authenticated %}
                 {% if profile.email_verified == false %}
-                    <p class="alert alert danger" role="alert">Hi {{  profile.first_name  }},<br><br>
+                    <p class="alert alert-danger" role="alert">Hi {{  profile.first_name  }},<br><br>
                         Please check the email account you used to register for an email with 
                         a link in it for confirming your email account. Once I know your email account
                         is real, I would love for you to start using Kind Table to plan some 
