Automating granting beta access

--- a/app/templates/main/email/request_beta_access_email.html
+++ b/app/templates/main/email/request_beta_access_email.html
@@ -8,6 +8,8 @@
 <p>Email:  <b>{{  email  }}</b></p>
 <p>Reason:   <b>{{  reason  }}</b></p>
 
+Aprove link: <a href="{{ url_for('main.owner_approved_beta_access', token=token, _external=True) }}">{{ url_for('main.owner_approved_beta_access', token=token, _external=True) }}</a>
+
 <p>Sincerely,</p>
 
 <p>Ilsa Gordon</p>
