Added Flask-Assets back in. Fixed namespace issues in Success Functions.

--- a/app/templates/profiles/email/friend_existing_user.html
+++ b/app/templates/profiles/email/friend_existing_user.html
@@ -1,6 +1,6 @@
 <p>Dear {{ profile.first_name }},</p>
 
-<p><strong>{{ friend.first_name}} {{ friend.last_name  }}<strong>({{  friend.email  }}) would like to 
+<p><strong>{{ friend.first_name}} {{ friend.last_name  }}<strong> - ({{  friend.email  }}) would like to 
 connect with you on KindTable. </p>
 
 
