--- a/app/templates/main/anonymous.html
+++ b/app/templates/main/anonymous.html
@@ -10,6 +10,11 @@
   <!-- Bootstrap -->
 
     <script type='text/javascript' src="{{  url_for('static', filename='js/jquery-3.2.1.min.js') }}"></script>
+
+    {% assets "js_all" %}
+        <script type="text/javascript" src="{{ ASSET_URL }}"></script>
+    {% endassets %}
+
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="{{  url_for('static', filename='site.css') }}">    
 
@@ -84,7 +89,6 @@
               {{ JSGlue.include() }}
             {% endblock %}
 
-          <script src="{{ url_for('static', filename = 'js/base.js') }}" type="text/javascript"></script>
 
           </body>
           </html>
