--- a/app/templates/main/base.html
+++ b/app/templates/main/base.html
@@ -11,6 +11,10 @@
 
     <script type='text/javascript' src="{{  url_for('static', filename='js/jquery-3.2.1.min.js') }}"></script>
 
+    {% assets "js_all" %}
+        <script type="text/javascript" src="{{ ASSET_URL }}"></script>
+    {% endassets %}
+
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="{{  url_for('static', filename='site.css') }}">    
 
