Found a bug in a party profile query.

--- a/app/templates/profiles/email/email_menu.html
+++ b/app/templates/profiles/email/email_menu.html
@@ -1,6 +1,6 @@
 <p>Dear {{ first_name }},</p>
 
-<p>Here is the menu you have planned for your party <a href={{  url_for('profiles.show_party_profile', party_id = party.party_id)  }}>{{  party.title}}</a>:</p>
+<p>Here is the menu you have planned for your party <a href="{{  url_for('profiles.show_party_profile', party_id = party.party_id)  }}">{{  party.title}}</a>:</p>
 
 <p>Here are links to the recipes on Spoonacular:</p>
 
