--- a/app/templates/profiles/add_a_party.html
+++ b/app/templates/profiles/add_a_party.html
@@ -14,7 +14,7 @@
             {{ render_field(add_party_form.party_name, style="width: 75%", rows="1") }}<br>
             {{ render_field(add_party_form.date) }}<br>
             {{ render_field(add_party_form.hour, value="19:00") }}
-            {{ render_field(add_party_form.notes, style="width: 100%", rows="4") }}<br>
+            {{ render_field(add_party_form.notes, style="width: 100%", rows="4", placeholder="Optional") }}<br>
             <input type="submit" class="btn btn-sm btn-info" value="Submit">&ensp;<button type="button" class="btn btn-sm btn-default" data-dismiss="modal">Cancel</button>
         </form>
     </div>
