--- a/app/templates/main/anonymous.html
+++ b/app/templates/main/anonymous.html
@@ -31,6 +31,7 @@
 </head>
 <body>
 
+
 <!-- Begin navbar -->
 
             <nav class="navbar navbar-default">
@@ -46,10 +47,16 @@
                   <a class="navbar-brand" href="/">Kind Table</a>
                 </div>
               <!-- Collect the nav links, forms, and other content for toggling -->
-                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                  <ul class="nav navbar-nav">
-                    <li><a href={{ url_for('auth.register') }}>New User? Register here.</a></li>
-                    <li><a href={{ url_for('auth.login') }}>Log in</a></li>
+                <div class="collapse navbar-collapse" id="bs-navbar-collapse-1">
+                  <div class="btn-group">
+                      <a class="btn btn-primary btn-sm navbar-btn" href={{ url_for('auth.register') }}>New User? Register here.</a>
+                      
+                      
+                  </div>
+                  <div class="navbar-right btn-group">
+                    <a class="btn navbar-btn btn-sm btn-default" href={{ url_for('auth.login', variable='#resetpassword')  }} >Reset Password</a>
+                    <a class="btn btn-info btn-sm navbar-btn" href={{ url_for('auth.login') }}>Log in</a>
+                  </div>
                   </ul>
                 </div><!-- /.navbar-collapse -->
               </div><!-- /.container-fluid -->
