--- a/app/templates/main/anonymous.html
+++ b/app/templates/main/anonymous.html
@@ -34,33 +34,40 @@
 
 <!-- Begin navbar -->
 
-            <nav class="navbar navbar-default">
-              <div class="container-fluid">
-               <!--     Brand and toggle get grouped for better mobile display--> 
-                 <div class="navbar-header">
-                  <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+
+    <nav class="navbar navbar-default">
+        <div class="container-fluid">
+        <!--     Brand and toggle get grouped for better mobile display--> 
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
-                  </button>
-                  <a class="navbar-brand" href="/">Kind Table</a>
-                </div>
-              <!-- Collect the nav links, forms, and other content for toggling -->
-                <div class="collapse navbar-collapse" id="bs-navbar-collapse-1">
-                  <div class="btn-group">
-                      <a class="btn btn-primary btn-sm navbar-btn" href={{ url_for('auth.register') }}>New User? Register here.</a>
-                      
-                      
-                  </div>
-                  <div class="navbar-right btn-group">
+                </button>
+                <a class="navbar-brand" href="/">Kind Table</a>
+            </div>
+        <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav">
+                    <li>
+                        <a class="btn btn-primary btn-sm navbar-btn" href={{ url_for('auth.register') }}>New User? Register here.</a>
+                    </li>
+                </ul>    
+   
+                <ul class="nav navbar-nav navbar-right">
                     <a class="btn navbar-btn btn-sm btn-default" href={{ url_for('auth.login', variable='#resetpassword')  }} >Reset Password</a>
                     <a class="btn btn-info btn-sm navbar-btn" href={{ url_for('auth.login') }}>Log in</a>
-                  </div>
-                  </ul>
-                </div><!-- /.navbar-collapse -->
-              </div><!-- /.container-fluid -->
-            </nav>
+                </ul>
+            </div><!-- /.navbar-collapse -->
+        </div><!-- /.container-fluid -->
+    </nav>
+
+
+
+
+
+
 
           <!-- ------------ -->
 
