--- a/app/templates/main/anonymous.html
+++ b/app/templates/main/anonymous.html
@@ -51,7 +51,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a class="btn navbar-btn btn-primary btn-sm" href={{ url_for('auth.register') }}>New User? Register here.</a>
+                        <a class="btn navbar-btn btn-sm btn-default" href={{ url_for('auth.register') }}>New User? Register here.</a>
                     </li>
                 </ul>    
    
